--- a/src/main/resources/application-load.properties
+++ b/src/main/resources/application-load.properties
@@ -11,8 +11,9 @@ spring.jpa.hibernate.ddl-auto=create-drop
 # Using the below naming strategies ensures that the default JDBC and JPA schemas for Axon become more similar,
 # making it easier to write the rest of the code in a generic way.
 #
-# Note that the schemas still wouldn't be identical, the JPA default one uses a Sequence for generate
-# global sequence numbers, wheres the JDBC default uses an auto-increment column.
+# Note that the schemas still wouldn't be identical. In both cases, generation of global sequence numbers takes
+# place through a database sequence. However, in the JDBC case this will be handled by a default value in the
+# table definition, whereas in the JPA case reading the sequence val and putting it in the record will be handled
+# by Hibernate.
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
-
