--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 logging.level.com.example.teptest=DEBUG
-logging.level.com.example.teptest.process=OFF
+logging.level.com.example.teptest.process=INFO
 
 spring.datasource.url= jdbc:postgresql://localhost:5432/axon
 spring.datasource.username=axon
